<snake> Кроскомпиляция под x64 Windows

--- a/snake/Makefile
+++ b/snake/Makefile
@@ -6,7 +6,12 @@ INC = -I ./inc/
 ifeq ($(UNAME), Linux)
 LINK = -L ./lib_unix -lraylib -lm
 else
-LINK = -L ./lib_win -lraylib -lopengl32 -lgdi32 -lwinmm -lm
+ARCH := $(shell echo %PROCESSOR_ARCHITECTURE%)
+ifeq ($(ARCH), x86)
+LINK = -L ./lib_win/x86 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
+else
+LINK = -L ./lib_win/x64 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
+endif
 endif
 SRC = ./src/main.c
 BUILD_PATH = ./build/snake_game
