--- a/snake/Makefile
+++ b/snake/Makefile
@@ -1,20 +1,25 @@
+# Под виндой вызовет error, ну и что.
 UNAME := $(shell uname)
 
 GCC = gcc
 GCC_FLAG = -Wall -pedantic -std=c99 -Wno-missing-braces
 INC = -I ./inc/
+SRC = ./src/main.c
+BUILD_PATH = ./build/snake_game
+
+# -----------------------------------------------------------
 ifeq ($(UNAME), Linux)
 LINK = -L ./lib_unix -lraylib -lm -pthread -ldl
 else
+# Да, это тупо. Очень тупо. Просто безумно тупо.
 ARCH := $(shell echo %PROCESSOR_ARCHITECTURE%)
 ifeq ($(ARCH), x86)
 LINK = -L ./lib_win/x86 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
 else
 LINK = -L ./lib_win/x64 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
-endif
-endif
-SRC = ./src/main.c
-BUILD_PATH = ./build/snake_game
+endif # ARCH
+endif # UNAME
+# -----------------------------------------------------------
 
 all:
 	$(GCC) $(SRC) -o $(BUILD_PATH) $(GCC_FLAG) $(INC) $(LINK)
