<snake> Меню с выбором режимов сложности

--- a/snake/Makefile
+++ b/snake/Makefile
@@ -6,13 +6,13 @@ BUILD_PATH = ./build/snake_game
 
 # -----------------------------------------------------------
 ifeq ($(ARCH), unix)
-LINK = -L ./lib_unix -lraylib -lm -pthread -ldl
+LINK = -L ./lib/lib_unix -lraylib -lm -pthread -ldl
 endif
 ifeq ($(ARCH), win86)
-LINK = -L ./lib_win/x86 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
+LINK = -L ./lib/lib_win/x86 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
 endif
 ifeq ($(ARCH), win64)
-LINK = -L ./lib_win/x64 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
+LINK = -L ./lib/lib_win/x64 -lraylib -lopengl32 -lgdi32 -lwinmm -lm
 endif # ARCH
 # -----------------------------------------------------------
 
